fixed margin of articles on mobile

--- a/css/common.css
+++ b/css/common.css
@@ -421,6 +421,8 @@ h3 {
 
 
 @media (max-width: 800px){
+
+	
 	#follow{
 		margin-bottom: 15px;
 	}
@@ -444,11 +446,11 @@ h3 {
 	margin-top: 10px;
 	}
 
-	.media-section {
+/*	.media-section {
 		margin-top: 30px;
 		margin-left: -10px;
 		margin-right: 10px;
-	}
+	}*/
 
 	.nav-top{
 		font-size:1.22rem;
@@ -518,15 +520,12 @@ h3 {
 		max-width:405px;
 	}
 
-	#viewer-3d img{
-		width: 300px;
-		height: 169px;
-	}
-
-	#viewer-3d{
-		max-width: 310px
-	}
 }
+
+
+
+
+
 
 @media (max-width: 1300px){ /*narrows the video grid*/
 	#videos {
